--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     angular.module('BlankApp', ['ngMaterial', 'ngMessages']);
   </script>
 
+  Test
+  
 </body>
 </html>
+
+
 
 <!--
 Copyright 2016-2019 Google Inc. All Rights Reserved. 
