--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     angular.module('BlankApp', ['ngMaterial', 'ngMessages']);
   </script>
 
-  Test
+  Buy this domain from Namecheap.com<br>
+  Steps:<br>
+  1. Visit namecheap.com<br>
+  2. Enter the domain name<br>
+  3. Buy as desribed there.<br>
+  Available domain names:<br>
+  Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me.
   
 </body>
 </html>
