--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   2. Enter the domain name<br>
   3. Buy as desribed there.<br>
   Available domain names:<br>
-  Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me.
+  Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me, Wasim.ae.<br>
+  Contact for queries: wasim.ullah@aol.com
   
 </body>
 </html>
