--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      */
     angular.module('BlankApp', ['ngMaterial', 'ngMessages']);
   </script>
-
+<div class="center">
   Buy this domain from Namecheap.com<br>
   Steps:<br>
   1. Visit namecheap.com<br>
@@ -34,6 +34,7 @@
   Available domain names:<br>
   Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me, Wasim.ae.<br>
   Contact for queries: wasim.ullah@aol.com
+  </div>
   
 </body>
 </html>
