--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
      */
     angular.module('BlankApp', ['ngMaterial', 'ngMessages']);
   </script>
+
+  <style>
+  @import "compass/css3";
+
+// sets up display table layout covering entire page
+.outer-container {
+  display: table;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  
+  // handles vertical center
+  .inner-container {
+    display: table-cell; 
+    vertical-align: middle;
+  
+    // handles horizontal center with margins
+    .content {
+      background: #ffa59e;
+      margin-left: auto;
+      margin-right: auto;
+      width: 5em;
+    }
+  }
+}</style>
+  
 <div class="center">
   Buy this domain from Namecheap.com<br>
   Steps:<br>
