--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
-  Buy this domain from Namecheap.com<br>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.center {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  align-items: center;
+  height: 100%;
+  width: 30px;
+  margin: auto;
+}
+
+html, body {
+  height: 100%;
+}
+</style>
+</head>
+<body>
+
+Buy this domain from Namecheap.com<br>
   Steps:<br>
   1. Visit namecheap.com<br>
   2. Enter the domain name<br>
@@ -6,3 +31,7 @@
   Available domain names:<br>
   Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me, Wasim.ae.<br>
   Contact for queries: wasim.ullah@aol.com
+
+
+</body>
+</html>
