--- a/index.html
+++ b/index.html
@@ -2,22 +2,12 @@
 <html>
 <head>
 <style>
-.center {
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -webkit-box-align: center;
-  align-items: center;
-  height: 100%;
-  width: 30px;
-  margin: auto;
-}
-
-html, body {
-  height: 100%;
+div {
+  position: absolute;
+  padding: 15px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 </style>
 </head>
