--- a/index.html
+++ b/index.html
@@ -14,20 +14,13 @@
 <link href="../assets/dist/css/bootstrap.css" rel="stylesheet">
 
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+      div {
+  position: absolute;
+  padding: 15px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
     </style>
     <!-- Custom styles for this template -->
     <link href="sticky-footer.css" rel="stylesheet">
@@ -35,16 +28,20 @@
   <body class="d-flex flex-column h-100">
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
-  <div class="container">
-    <h1 class="mt-5">Sticky footer</h1>
-    <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
-    <p>Use <a href="../examples/sticky-footer-navbar/">the sticky footer with a fixed navbar</a> if need be, too.</p>
+  <div>
+    Buy this domain from Namecheap.com<br>
+  Steps:<br>
+  1. Visit namecheap.com<br>
+  2. Enter the domain name<br>
+  3. Buy as desribed there.<br>
+  Available domain names:<br>
+  Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me, Wasim.ae.<br>
+  Contact for queries: wasim.ullah@aol.com
   </div>
 </main>
 
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">Place sticky footer content here.</span>
   </div>
 </footer>
 </body>
