--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div>
-    Buy this domain from Namecheap.com<br>
+    Buy this domain from Namecheap.com<br><br>
   Steps:<br>
   1. Visit namecheap.com<br>
   2. Enter the domain name<br>
-  3. Buy as desribed there.<br>
+  3. Buy as desribed there.<br><br>
   Available domain names:<br>
-  Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me, Wasim.ae.<br>
+  Kozoi.com, Fayza.co, Gaari.co, Hatti.me, Khao.me, Langar.co, Paisa.me, Readin.me, Sanity.ai, Sayr.me, Wasim.ae.<br><br>
   Contact for queries: wasim.ullah@aol.com
   </div>
 </main>
