--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="sticky-footer.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
+    
   </head>
+  
+  
+  
   <body class="d-flex flex-column h-100">
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
