--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div>
-<p style="font-family:'Inter', sans-serif;">This is a paragraph.</p>
+<p style="font-family:'Inter', sans-serif;">wasim@hey.com</p>
   </div>
 </main>
 
