--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
     
+    <script src="main.js"></script>
+    
   </head>
   
   
