--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
   
   
-  
+  <canvas id=canvas>   
   <body class="d-flex flex-column h-100">
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
@@ -46,4 +46,5 @@
   </div>
 </footer>
 </body>
+</canvas>
 </html>
