--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <main role="main" class="flex-shrink-0">
   <div>
 <h1 class="text" style="font-family:'Inter', sans-serif;">1</h1>
+    <i class="far fa-envelope-open"></i>
   </div>
 </main>
 
