--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div>
-<h1 class="text" style="font-family:'Inter', sans-serif;">1</h1>
-    wasim@hey.com
+<p class="text" style="font-family:'Inter', sans-serif;">1</p>
   </div>
 </main>
 
