--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="sticky-footer.css" rel="stylesheet">
   
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">
     
   </head>
   
