--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="sticky-footer.css" rel="stylesheet">
   
 <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap" rel="stylesheet">
     
   </head>
   
@@ -33,7 +33,7 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div>
-<h1 class="text" style="font-family: 'Inter', sans-serif;">wasim@hey.com</h1>
+<h1 class="text" style="font-family: 'Red Hat Display', sans-serif;">wasim@hey.com</h1>
   </div>
 </main>
 
