--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div>
-<h1 class="text" style="font-family: 'Red Hat Display', sans-serif;">wasim@hey.com</h1>
+<h1 class="text" style="font-family: 'Red Hat Display', sans-serif;">WASIM@HEY.COM</h1>
   </div>
 </main>
 
