--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div>
-<h6 class="text" style="font-family: 'Inter', sans-serif;">WASIM@HEY.COM</h6>
+<h6 class="text" style="font-family: 'Inter', sans-serif;">EMAIL:<br>WASIM@HEY.COM</h6>
   </div>
 </main>
 
