--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div>
-    <h6 class="text" style="font-family: 'Inter', sans-serif;">WANT TO BUY THIS DOMAIN? CONTACT</h6>
-<h6 class="text" style="font-family: 'Inter', sans-serif;">EMAIL:<br>WASIM.ULLAH@AOL.COM</h6>
+    <h6 class="text" style="font-family: 'Inter', sans-serif;">WANT TO BUY THIS DOMAIN?</h6>
+<h6 class="text" style="font-family: 'Inter', sans-serif;">EMAIL WASIM.ULLAH@AOL.COM</h6>
   </div>
 </main>
 
